# roerich

./: .gitignore  .gitmodules  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Test.ipynb  algorithms.py  cpd.py  helper.py  index.html  metrics.py  mkdocs.yml  pyproject.toml  scaler_helper.py  search.html  setup.cfg  setup.py  sitemap.xml
.github/workflows/: tests.yml
about/: index.html
cpdclassifier/: index.html
cpdclassifier_cv/: index.html
cpdrulsif/: index.html
docs/: about.md  cpdclassifier.md  cpdclassifier_cv.md  cpdrulsif.md  energy.md  gbdtrulsif.md  matrix.md  nnclassifier.md  nnrulsif.md  onnc.md  onnr.md  pr.md  window.md
docs/examples/: benchmarking.ipynb  demo.ipynb  seismic.ipynb  wisdm.ipynb
energy/: index.html
examples/: demo.ipynb
examples/benchmarking/: index.html
examples/benchmarking-Copy1/: index.html
examples/demo/: index.html
examples/seismic/: index.html
examples/wisdm/: index.html
gbdtrulsif/: index.html
matrix/: index.html
nnclassifier/: index.html
nnrulsif/: index.html
onnc/: index.html
onnr/: index.html
pr/: index.html
roerich/: LICENSE  __init__.py  algorithms.py  cpd.py  dataset.py  helper.py  net.py  rulsif.py  scaler.py  utils.py  viz.py
roerich/algorithms/: __init__.py  algorithms.py  calc_metrics.py  cpdc.py  cpdc_abs.py  cpdc_cv.py  cpdc_ebs.py  enrg_dist.py  matrix.py  models.py  net.py  onnc.py  onnr.py  scaler.py
roerich/change_point/: __init__.py  onnc.py  onnr.py  windows.py
roerich/costs/: mmd.py
roerich/density_ratio/: __init__.py
roerich/explanation/: __init__.py
roerich/metrics/: __init__.py  metrics.py  pr.py
roerich/networks/: __init__.py
roerich/scores/: __init__.py  energy.py  fd.py
search/: search_index.json
tests/: test_change_point.py  test_costs.py  test_density_ratio.py  test_explanation.py  test_metrics.py  test_networks.py  test_scores.py
window/: index.html
