[tool.poetry]
name = "roerich"
version = "0.3.0"
description = "Roerich is a python library for online and offline change point detection in time series data based on machine learning."
authors = ["Mikhail Hushchyn <hushchyn.mikhail@gmailcom>, Kenenbek Arzymatov <kenenbek@gmail.com>"]
license = "BSD 2-Clause"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.0"
pandas = "^1.4.2"
scipy = "^1.8.1"
scikit-learn = "^1.1.1"
joblib = "^1.1.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
