[metadata]
name = roerich
version = 0.5.0
author = Mikhail Hushchyn, Kenenbek Arzymatov
author_email = hushchyn.mikhail@gmail.com, kenenbek@gmail.com
description = Roerich is a python library for online and offline change point detection in time series data based on machine learning.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HSE-LAMBDA/roerich
project_urls =
    Documentation = https://hse-lambda.github.io/roerich/
    Source = https://github.com/HSE-LAMBDA/roerich/
license = BSD-2-Clause
license_files = LICENSE
keywords =
    python
    machine learning
    neural networks
    signal processing
    segmentation
    time series analysis
    anomaly detection
    change point detection
    density ratio
classifiers =
        Intended Audience :: Science/Research
        Topic :: Scientific/Engineering
        Programming Language :: Python :: 3
        License :: OSI Approved :: BSD License
        Operating System :: OS Independent
        # See full list on https://pypi.org/classifiers/

[options]
packages = find:
include_package_data = True
python_requires = >= 3.6
install_requires =
          numpy>=1.23.0
          pandas>=1.4.2
          scipy>=1.8.1
          scikit-learn>=1.1.1
          joblib>=1.1.0
          matplotlib>=3.5.2
          torch>=1.11.0
          torchaudio>=0.11.0
          torchvision>=0.12.0
